--- a/index.html
+++ b/index.html
@@ -5,13 +5,203 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-School</title>
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+   <section class="header">
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="ICON/Logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#Books">Books</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Couress">Coures</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Others">Others</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#Blog">Blog</a>
+                  </li>
+                  <li class="nav-item">
+                   <button class="button-2">Sign in</button>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+          <div class="row banner">
+            <div class="col-md-6">
+              <p class="red">Are You Ready to learn</p>
+                <h1>Learn with fun <br> <span class="green">on any schedule</span></h1>
+                <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem aperiam, incidunt ab sunt nisi voluptate explicabo iusto nobis nostrum consequuntur?</p>
+              <button class="button">Get Started</button>
+            </div>
+            <div class="col-md-6 text-center">
+                <img  src="Photos/Illustration.png" class="img-fluid" alt="">
+            </div>
+          </div>
+    </div>
+   </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+   <section class="service">
+    <div class="container Books" id="Books">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="service-box">
+                    <img src="ICON/book.png" alt="">
+                    <h5>1500+ Topic</h5>
+                    <p>Learn Anything</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="service-box">
+                    <img src="ICON/Student.png" alt="">
+                    <h5>1800+ Students</h5>
+                    <p>Learn Anything</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="service-box active-service">
+                    <img src="ICON/Test.png" alt="">
+                    <h5>9K+ Test Token</h5>
+                    <p>Learn Anything</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+              <div class="service-box">
+                  <img src="ICON/Students.png" alt="">
+                  <h5>2000+ Students</h5>
+                  <p>Learn Anything</p>
+              </div>
+          </div>
+        </div>
+    </div>
+</section>
+
+<section class="Couress">
+  <div class="container Online Courses" id="Couress">
+    <h3>Online Courses</h3>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="Photos/Morder pyschology.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Pyschology</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita necessitatibus suscipit, ipsum corrupti veritatis doloribus.</p>
+            <button class="button">Buy Now</button>
+          </div>
+          <div class="card-footer">
+            <p> <i class="fas fa-calendar-alt" aria-hidden="true"></i> <span class="date">Start 20 April 2021</span> <span class="users"><i class="fas fa-users" aria-hidden="true"></i></span> <span class="date">60 Seats</span> </p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="Photos/Morder psyc.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Pyschology</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita necessitatibus suscipit, ipsum corrupti veritatis doloribus.</p>
+            <button class="button">Buy Now</button>
+          </div>
+          <div class="card-footer">
+            <p> <i class="fas fa-calendar-alt" aria-hidden="true"></i> <span class="date">Start 20 April 2021</span> <span class="users"><i class="fas fa-users" aria-hidden="true"></i></span> <span class="date">60 Seats</span> </p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="Photos/Morder pychons.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Modern Pyschology</h5>
+            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita necessitatibus suscipit, ipsum corrupti veritatis doloribus.</p>
+            <button class="button">Buy Now</button>
+          </div>
+          <div class="card-footer">
+            <p> <i class="fas fa-calendar-alt" aria-hidden="true"></i> <span class="date">Start 20 April 2021</span> <span class="users"><i class="fas fa-users" aria-hidden="true"></i></span> <span class="date">60 Seats</span> </p>
+          </div>
+        </div>
+      </div>
+    </div>
+</section>
+
+<section class="Blog">
+  <div class="container Blog" id="Blog">
+    <h3 class="Blog">Blog</h3>
+  <div class="container">
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/testimonial-1.png">
+          <div class="carousel-caption">
+            <h5>Moynar Ma</h5>
+            <small>CEO & FOUNDER @ Microsoft</small>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias doloribus dolore <br> consequatur sunt asperiores ipsum pariatur maiores quibusdam aliquid repudiandae</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/testimonial-2.jpg">
+          <div class="carousel-caption">
+            <h5>Sabbir Talukdar</h5>
+            <small>GRAPHICS DESIGNER & WEB DEVELOPER</small>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias doloribus dolore <br> consequatur sunt asperiores ipsum pariatur maiores quibusdam aliquid repudiandae.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="images/testimonial-3.jpg">
+          <div class="carousel-caption">
+            <h5>Sokhinar Ma</h5>
+            <small>CEO & FOUNDER @ Facebook</small>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias doloribus dolore <br> consequatur sunt asperiores ipsum pariatur maiores quibusdam aliquid repudiandae</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="Others">
+  <h3>Outhers</h3>
+  <div class="container Others" id="Others">
+  <div class="row">
+    <div class="col-md-3">
+     <small> Lorem ipsum dolor, sit amet consectetur adipisicing elit.</small>
+    </div>
+    <div class="col-md-3">
+      <h5>Courses</h5>
+      <small>Graphics Design <br> Web Design <br> Business <br> Marketing <br> enginearing </small>
+    </div>
+    <div class="col-md-3">
+      <h5>Terms</h5>
+      <small>Graphics Design <br> Web Design <br> Business <br> Marketing <br> enginearing </small>
+    </div>
+    <div class="col-md-3">
+      <h5>Useful Link </h5>
+      <small>Graphics Design <br> Web Design <br> Business <br> Marketing <br> enginearing </small>
+    </div>
+  </div>
+</section>
+<section>
+  <footer>© Sabbir Talukdar (All rights reserved)</footer>
+</section>
+  
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
